appId: com.jbig.tonkeeper
---
- runFlow: "../../../steps/launch_app_ensure_ton_wallet.yaml"
- runFlow: "../../../service/account/compare_ton_balance.yaml"
- runFlow: "../../../steps/ensure_trade_tab_or_relaunch.yaml"

- waitForAnimationToEnd:
    timeout: 10000
- scrollUntilVisible:
    element: ${NATIVE_TOKEN_DISPLAY_TEXT}
    direction: DOWN
    timeout: 3000
- tapOn: ${NATIVE_TOKEN_DISPLAY_TEXT}
- runFlow: "../../../steps/trade/tap_asset_details_send.yaml"
- tapOn:
    id: input_field
- inputText: ${RECIEVE_WALLET}
- tapOn: MAX
- tapOn: Continue

- runFlow: "../../../steps/transactions/assert_receive_wallet_visible.yaml"
- swipe:
    from:
      id: confirm_swipe
    direction: RIGHT
    duration: 2000

- assertVisible: "Are you sure you want to send your entire balance of .*"
