appId: com.jbig.tonkeeper.dev
---
- tapOn: History
- assertVisible: |-
    Your history
    will be shown here

- tapOn: ${"Buy " + NATIVE_TOKEN_DISPLAY_TEXT}
- assertVisible: ${"Buy " + NATIVE_TOKEN_DISPLAY_TEXT}
- tapOn:
    id: ic-close-16
- tapOn: Receive
- runFlow: "recieve_modal/ton.yaml"
- swipe:
    from:
      text: ${NATIVE_TOKEN_DISPLAY_TEXT}
    direction: DOWN

- tapOn: Collectibles
- assertVisible: Your collectibles will be shown here
