appId: com.jbig.tonkeeper
---
- runFlow: mnemonic/import_wallet_paste_retry.yaml

- repeat:
    times: 4
    commands:
      - tapOn: ${PASSWORD_KEY}

- assertVisible: Re-enter passcode
- repeat:
    times: 4
    commands:
      - tapOn: ${PASSWORD_KEY}

- runFlow: skip_notifications_onboarding.yaml

- tapOn:
    text: Continue
    waitToSettleTimeoutMs: 15000

- waitForAnimationToEnd:
    timeout: 5000

- tapOn:
    id: stories_close
    optional: true
